{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 61,
  "lineage": "ad22ca26-f418-d75f-339d-bd201b72b483",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-30T06:50:32.336-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cowo-devops-course-1/global/firewalls/allow-ssh-task2-dm",
            "log_config": [],
            "name": "allow-ssh-task2-dm",
            "network": "https://www.googleapis.com/compute/v1/projects/cowo-devops-course-1/global/networks/default",
            "priority": 1000,
            "project": "cowo-devops-course-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cowo-devops-course-1/global/firewalls/allow-ssh-task2-dm",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh-traffic"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-traffic",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-12-30T06:50:32.334-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cowo-devops-course-1/global/firewalls/allow-http-task2-dm",
            "log_config": [],
            "name": "allow-http-task2-dm",
            "network": "https://www.googleapis.com/compute/v1/projects/cowo-devops-course-1/global/networks/default",
            "priority": 1000,
            "project": "cowo-devops-course-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cowo-devops-course-1/global/firewalls/allow-http-task2-dm",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-traffic"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "cos-instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-73-11647-217-0",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cowo-devops-course-1/zones/us-west2-a/disks/devops-task2-dm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cowo-devops-course-1/zones/us-west2-a/instances/devops-task2-dm",
            "instance_id": "49645550617832790",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "user-data": "#cloud-config\n\nusers:\n- name: cloudservice\n  uid: 2000\n\nwrite_files:\n- path: /etc/systemd/system/myservice.service\n  permissions: 0644\n  owner: root\n  content: |\n    [Unit]\n    Description=My Service\n    Requires=docker.service network-online.target\n    After=docker.service network-online.target\n\n    [Service]\n    Environment=\"HOME=/home/cloudservice\"\n    ExecStartPre=/usr/bin/docker login hub.docker.com -u dmkhitaryan -p Dummypasswordfordevopscour [...]
            },
            "metadata_fingerprint": "VUU8Ljsgh2w=",
            "name": "devops-task2-dm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.235.90.122",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cowo-devops-course-1/global/networks/default",
                "network_ip": "10.168.0.11",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cowo-devops-course-1/regions/us-west2/subnetworks/default",
                "subnetwork_project": "cowo-devops-course-1"
              }
            ],
            "project": "cowo-devops-course-1",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cowo-devops-course-1/zones/us-west2-a/instances/devops-task2-dm",
            "tags": [
              "http-server",
              "http-traffic",
              "https-server",
              "ssh-traffic"
            ],
            "tags_fingerprint": "-DeeGL9x1Ow=",
            "zone": "us-west2-a"
          }
        }
      ]
    }
  ]
}